add import swagger dialog
